<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="280dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/list_aladdin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/judul"
                android:textColor="@color/text_light_blue"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:gravity="right"
                android:text="@string/durasi"
                android:textColor="@color/text_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/rating"
                android:textColor="@color/text_light_blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/rates"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_star" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/genre"
            android:textColor="@color/text_dark" />

        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/text_light_blue"
            tools:text="Lorem Ipsum" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
